fix: popup margin on mobile

--- a/sass/popup.module.sass
+++ b/sass/popup.module.sass
@@ -3,14 +3,14 @@ div.popup
     top: 0
     left: 0
     padding: 0
-    margin: 0
+    margin: 10px
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
     background: var(--popup-bg)
-    width: 100%
-    height: 100vh
+    width: calc( 100% - 10px * 2 )
+    height: calc( 100vh - 10px * 2 )
     z-index: 99999
     animation: opacityin 370ms ease-in-out
     @keyframes opacityin
